--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "nome": "Aula 05: Filtros com HTML5 e CSS",
+    "nome": "Aula: Filtros com HTML5 e CSS",
     "academico":{
         "curso": "Autoração Multimídia II",
         "cursoIcone": "layout/icones/banner_henrique.svg",
